[package]
name = "caracat"
version = "1.0.0"
description = "A fast ICMP/UDP IPv4/v6 Paris traceroute and ping engine."
repository = "https://github.com/maxmouchet/caracat"
license = "MIT"
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
categories = [
    "command-line-utilities",
    "network-programming",
]
keywords = ["ping", "traceroute"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
circular-queue = "0.2.6"
csv = "1.2.1"
env_logger = "0.10.0"
hex = "0.4.3"
ip_network_table-deps-treebitmap = "0.5.0"
log = "0.4.17"
pcap = { version = "1.1.0" }
pnet = { version = "0.33.0", features = ["std"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "3.0.0"
strum = { version = "0.24.1", features = ["derive"] }
zstd = "0.12.3"

[dev-dependencies]
# These crates are only needed for running the examples.
clap = { version = "4.3.0", features = ["derive"] }
dns-lookup = "2.0.2"
libm = "0.2.7"
permutation_iterator = "0.1.2"

[features]
# Build zstd by using host libraries instead of the sources bundled with the zstd crate.
# This is currently used by the Nix flake, for which the bundled sources cannot be used.
pkg-config = ["zstd/pkg-config"]
