[package]
name = "caracat"
version = "1.0.0"
description = "A fast ICMP/UDP IPv4/v6 Paris traceroute and ping engine."
repository = "https://github.com/maxmouchet/caracat"
license = "MIT"
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
categories = [
    "command-line-utilities",
    "network-programming",
]
keywords = ["ping", "traceroute"]
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
circular-queue = "0.2.6"
csv = "1.3.0"
env_logger = "0.11.5"
hex = "0.4.3"
hyperloglog = "1.0.2"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
ip_network_table-deps-treebitmap = "0.5.0"
log = "0.4.22"
pcap = { version = "2.2.0" }
pnet = { version = "0.35.0", features = ["std"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
# These crates are only needed for running the examples.
clap = { version = "4.5.18", features = ["derive"] }
dns-lookup = "2.0.4"
irrc = "0.1.0"
lazy_static = "1.5.0"
libm = "0.2.8"
permutation_iterator = "0.1.2"
regex = "1.10.6"
rpsl = "0.1.1"
