[package]
name = "caracat"
version = "1.4.2"
description = "A fast ICMP/UDP IPv4/v6 Paris traceroute and ping engine."
repository = "https://github.com/maxmouchet/caracat"
license = "MIT"
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
categories = [
    "command-line-utilities",
    "network-programming",
]
keywords = ["ping", "traceroute"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
circular-queue = "0.2.6"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
log = "0.4.22"
pcap = { version = "2.2.0" }
pnet = { version = "0.35.0", features = ["std"] }
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
# These crates are only needed for running the examples.
clap = { version = "4.5.26", features = ["derive"] }
dns-lookup = "2.0.4"
env_logger = "0.11.6"
irrc = "0.1.0"
lazy_static = "1.5.0"
libm = "0.2.11"
permutation_iterator = "0.1.2"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.11.1"
rpsl = "0.1.1"
strum = { version = "0.26.3", features = ["derive"] }
